# 42_cursus

./: .ft_isalpha.c.swp  .gitmodules  Makefile  READEME.md  README.md  a.out  arg_control.c  args.txt  bench.txt  benchmark.c  ft_adaptive.c  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_character.c  ft_complex.c  ft_decimal.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lower_hex.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_medium.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_printchrs.c  (+48 more)
Milestone_2/A-Maze-ing/: Makefile  README.md  a_maze_ing.py  config.txt  output_file.txt  pyproject.toml  representation.py
Milestone_2/A-Maze-ing/mazegen/: maze_generator.py
Milestone_3/Fly-in/: Makefile  README.md  flyin.py  pathfinder.py  pyproject.toml  simulator.py  visualisation.py
Milestone_3/Fly-in/maps/challenger/: 01_the_impossible_dream.txt
Milestone_3/Fly-in/maps/easy/: 01_linear_path.txt
ft_printf/: Makefile  ft_hex.c
get_next_line/: get_next_line.c  get_next_line_utils_bonus.c
level_1/: first_word.c  fizzbuzz.c  ft_swap.c  search_and_replace.c
level_2/: alpha_mirror.c
level_3/: a.out  epur_str.c  expand_str.c  ft_atoi_base.c  ft_range.c  hidenp.c  lcm.c  strs_capitalizer.c
libft/: README.md  ft_lstadd_back.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_putchar_fd.c  ft_striteri.c  ft_strlcat.c  ft_strncmp.c  ft_strrchr.c  libft.h
push_swap/: Makefile  README.md  arg_control.c  ft_medium.c  (+3 more)
(+181 files in other folders)
