[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen.romarti2dtaylor"
version = "1.0.0"
description = "Un módulo reutilizable para generar laberintos perfectos"
readme = "README.md"
authors = [
{ name = "DylanTaylor"},
{ name = "RocioMartin"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["mazegen*"]